Fixed spacing issues

--- a/public/styles.css
+++ b/public/styles.css
@@ -300,7 +300,8 @@ hr {
   font-family: 'Karla', sans-serif;
   font-size: 20px;
   font-weight: 400;
-  padding-bottom: 10px;
+  margin-top: 5px;
+  padding-bottom: 5px;
   padding-top: 20px;
 }
 
@@ -312,6 +313,12 @@ hr {
 
 #like {
   font-size: 20px;
+}
+
+.map-image {
+  max-height: 400px;
+  margin-bottom: 20px;
+  width: auto;
 }
 
 /* Autocomplete Input */
